# athena

./: .gitignore  Cargo.toml  README.md
abm/: Cargo.toml  pyproject.toml
abm/examples/: exchange_sim_demo.rs  simple_sim.rs
abm/notebooks/: test_synthetic_orderbook.ipynb
abm/src/: lib.rs  python.rs
abm/src/application/: mod.rs
abm/src/application/agents/: action.rs  agent.rs  arbitrageur.rs  informed.rs  market_state.rs  mean_reversion.rs  mod.rs  momentum.rs  noise.rs
abm/src/application/generators/: mod.rs  synthetic_orderbook.rs
abm/src/application/simulation/: async_runner.rs  mod.rs  runner.rs
abm/src/domain/: market_structure.rs  mod.rs  orderbook_moments.rs
abm/src/infrastructure/: exchange_adapter.rs  mock_feed.rs  mod.rs
abm/tests/: statistical_validation.rs
agent/: Cargo.toml
agent/src/: lib.rs  main.rs
agent/src/gateway_in/: README.md  mod.rs
agent/src/gateway_in/application/: config.rs  exchange_manager.rs  market_data_handler.rs  mod.rs
agent/src/gateway_in/config/: gateway_config.json  loader.rs  mod.rs  types.rs
agent/src/gateway_in/domain/: events.rs  exchange.rs  mod.rs  sync_status.rs  traits.rs
agent/src/gateway_in/infrastructure/: mod.rs  parsers.rs  rest_client.rs  ws_client.rs
agent/src/order_book/: mod.rs  shared_book.rs
agent/src/signal/: engine.rs  mod.rs  traits.rs  types.rs
agent/src/signal/application/: mod.rs
agent/src/signal/domain/: calculations.rs  direction.rs  mod.rs  signal.rs  strategy.rs  value_objects.rs
agent/src/signal/features/: mod.rs  order_book.rs  price.rs
agent/src/signal/infrastructure/: mod.rs
agent/tests/: multi_exchange_integration.rs
crates/exchange-sim/: Cargo.toml
crates/exchange-sim/src/: error.rs  lib.rs  model.rs
crates/exchange-sim/src/application/: exchange.rs
crates/exchange-sim/src/infrastructure/: mod.rs  order_book.rs  router.rs  time.rs
crates/exchange-sim/src/tests/: exchange_tests.rs  matching_engine_tests.rs  order_book_tests.rs
crates/exchange-sim/tests/: integration_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: error.rs  lib.rs
crates/gateway/src/adapters/: mod.rs
crates/gateway/src/messages/: market_data.rs  mod.rs  order.rs
crates/gateway/src/transport/: channel.rs  config.rs  mod.rs
crates/gateway/tests/: exchange_integration.rs
crates/order-manager/: Cargo.toml
crates/order-manager/src/: aggregator.rs  error.rs  execution.rs  lib.rs  position.rs  risk.rs  signal.rs
crates/order-manager/src/tca/: benchmark.rs  calibration.rs  estimator.rs  measurement.rs  mod.rs  models.rs  scheduler.rs
crates/order-manager/tests/: integration_test.rs
crates/risk-manager/: Cargo.toml
crates/risk-manager/src/: lib.rs  manager.rs  parameters.rs  surveillance.rs
crates/runner/: Cargo.toml
crates/runner/src/: agent.rs  bootstrap.rs  event_feed.rs  lib.rs  simulation.rs
crates/runner/tests/: multi_agent_simulation.rs
crates/shared/core/: Cargo.toml
crates/shared/core/src/: lib.rs
crates/shared/risk/: Cargo.toml
crates/shared/risk/src/: basic.rs  lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: events.rs  lib.rs  market_maker.rs  mean_reversion.rs  orderbook.rs  strategy.rs
crates/strategy/tests/: market_maker_integration.rs
docs/: ARCHITECTURE.md  TCA.md  (+10 more)
exchange-sim/: Cargo.toml  README.md
exchange-sim/config/: futures.json  multi-instrument.json  spot-only.json
exchange-sim/src/: lib.rs  main.rs
exchange-sim/src/application/: mod.rs
exchange-sim/src/application/ports/: account_repository.rs  blockchain_port.rs  custodian_repository.rs  event_publisher.rs  instrument_repository.rs  mod.rs  order_book_repository.rs  pool_repository.rs  rate_limiter.rs  withdrawal_repository.rs
exchange-sim/src/application/use_cases/: cancel_order.rs  get_depth.rs  get_exchange_info.rs  liquidity.rs  mod.rs  process_deposit.rs  process_withdrawal.rs  request_withdrawal.rs  submit_order.rs  swap.rs
exchange-sim/src/domain/: mod.rs
exchange-sim/src/domain/entities/: account.rs  custodian.rs  instrument.rs  liquidity_pool.rs  loan.rs  mod.rs  order.rs  order_book.rs  position.rs  price_level.rs  trade.rs  withdrawal.rs
exchange-sim/src/domain/events/: mod.rs
exchange-sim/src/domain/instruments/: future.rs  mod.rs  option.rs  perpetual.rs  spec.rs  spot.rs
exchange-sim/src/domain/matching/: algorithm.rs  mod.rs
exchange-sim/src/domain/services/: blockchain_simulator.rs  clock.rs  margin_calculator.rs  mod.rs  order_validator.rs  world_clock.rs
exchange-sim/src/domain/value_objects/: mod.rs  order_type.rs  side.rs  symbol.rs
exchange-sim/src/infrastructure/: blockchain_adapter.rs  mod.rs
exchange-sim/src/infrastructure/clock/: mod.rs  simulation_clock.rs
exchange-sim/src/infrastructure/config/: mod.rs
exchange-sim/src/infrastructure/event_publisher/: broadcast.rs  mod.rs
exchange-sim/src/infrastructure/matching/: mod.rs  price_time.rs
exchange-sim/src/infrastructure/order_book_shard/: command.rs  manager.rs  mod.rs  shard.rs
exchange-sim/src/presentation/: mod.rs
exchange-sim/tests/: api_integration.rs  cross_exchange_transfer.rs  custodian_withdrawal_integration.rs  dex_integration.rs  instrument_trading.rs  market_simulation.rs  websocket_integration.rs
trading-core/: Cargo.toml
trading-core/src/: lib.rs
trading-core/src/entities/: mod.rs  order.rs  price_level.rs  trade.rs
trading-core/src/events/: depth_events.rs  mod.rs  order_events.rs  trade_events.rs
trading-core/src/messages/: exchange.rs  market_data.rs  mod.rs  signal.rs
trading-core/src/stats/: ema.rs  mod.rs  rolling.rs
trading-core/src/value_objects/: mod.rs  price.rs  quantity.rs  symbol.rs  time_in_force.rs
trading-infra/execution/: Cargo.toml
trading-infra/execution/src/: lib.rs
trading-infra/gateway/: Cargo.toml
trading-infra/gateway/src/: lib.rs  main.rs
trading-infra/risk-management/: Cargo.toml
trading-infra/risk-management/src/: lib.rs
trading-infra/strategy/: Cargo.toml
trading-infra/strategy/src/: lib.rs  main.rs
trading-infra/transport/: Cargo.toml
trading-infra/transport/src/: lib.rs
(+157 files in other folders)
