[workspace]
resolver = "2"
members = [
    "exchange-sim",
    "trading-core",
    "agent",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["l3p"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44.2", features = ["full"] }

# Error handling
thiserror = "1.0"

# Identifiers & time
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Logging
log = "0.4.27"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "6.1"

# Data structures
priority-queue = "2.3.1"

# Decimal precision
rust_decimal = { version = "1.37.1", features = ["serde"] }
rust_decimal_macros = "1.37.1"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
