[package]
name = "abm"
description = "Agent-Based Model for market simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "abm"
crate-type = ["cdylib", "rlib"]

[dependencies]
trading-core = { path = "../trading-core" }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { workspace = true }

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
# For statistical validation tests
approx = "0.5"

[features]
default = []
python = ["pyo3"]
