[package]
name = "abm"
description = "Agent-Based Model for market simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "abm"
crate-type = ["cdylib", "rlib"]

[dependencies]
trading-core = { path = "../trading-core" }
exchange-sim = { path = "../exchange-sim" }
risk-management = { path = "../trading-infra/risk-management" }

# Time handling
chrono = "0.4"

# Async runtime
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = "0.1"

# Thread-safe utilities
parking_lot = "0.12"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { workspace = true }

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
# For statistical validation tests
approx = "0.5"

[features]
default = []
python = ["pyo3"]
