[package]
name = "agent"
version = "0.1.0"
edition = "2024"
authors = ["l3p"]
description = "Trading agent for competing against the exchange simulator"

[dependencies]
# Shared trading types
trading-core = { path = "../trading-core" }

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# WebSocket client
tokio-tungstenite = "0.26"
futures-util = "0.3"

# HTTP client for REST API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Decimal precision
rust_decimal = { version = "1.37", features = ["serde", "maths"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# URL handling
url = "2.5"

[dev-dependencies]
# For integration tests - start exchange servers
exchange-sim = { path = "../exchange-sim" }
axum = "0.8"
tower = "0.5"
rust_decimal_macros = "1.37"

[[bin]]
name = "agent"
path = "src/main.rs"
