[package]
name = "trading-core"
version = "0.1.0"
edition = "2024"
authors = ["l3p"]
description = "Shared trading domain types for the Athena trading system"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Identifiers & time
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
