[package]
name = "athena-risk-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Active trading risk management - monitors market, publishes risk parameters"

[dependencies]
# Internal crates
athena-core.workspace = true
athena-gateway.workspace = true

# Async runtime
tokio.workspace = true
chrono.workspace = true

# Data structures
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

# Serialization
serde.workspace = true

# Async traits
async-trait = "0.1"

# Logging
log.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
env_logger.workspace = true
