[package]
name = "athena-strategy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Strategy framework for Athena - local OB replicas, strategy traits, and implementations"

[dependencies]
# Internal crates
athena-core.workspace = true
athena-gateway.workspace = true

# Async runtime
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true

# Data structures
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

# Serialization
serde.workspace = true

# Async traits
async-trait = "0.1"

# Logging
log.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
exchange-sim = { path = "../exchange-sim" }
env_logger = "0.11"
