[package]
name = "strategy"
version.workspace = true
edition.workspace = true
description = "Strategy and signal generation"

[dependencies]
# Workspace crates
trading-core = { path = "../../trading-core" }
transport = { path = "../transport" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Concurrency (for local order book)
arc-swap = "1.7"
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# UUID for signal IDs
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "strategy"
path = "src/main.rs"
