[package]
name = "athena-risk"
version.workspace = true
edition.workspace = true
description = "Risk management implementations for Athena trading system"

[dependencies]
athena-core.workspace = true
athena-ports.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
uuid.workspace = true
log.workspace = true
